# SQLSAGE_AiVERSE

./: .env  README.md  app.py  pyproject.toml  query_corrections.json  query_export.csv  query_history.json  replit.nix  requirements.txt  user_preferences.json
assets/: custom.css
attached_assets/: Pasted-Project-Title-SQL-SAGE-by-AiVERSE-AI-Powered-Natural-Language-to-SQL-Query-Generator-Objective--1741421081893.txt  Pasted-This-SQL-query-requires-several-subqueries-and-joins-to-achieve-the-desired-result-The-exact-synta-1741422290625.txt
utils/: database.py  eden_ai_client.py  error_handler.py  query_history.py  query_optimizer.py  query_playground.py  schema_validator.py  schema_visualizer.py  sql_dialects.py  sql_validator.py  user_preferences.py
