[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.20.3",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "pygments>=2.19.1",
    "requests>=2.32.3",
    "sqlparse>=0.5.3",
    "streamlit>=1.43.1",
]
